test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/command_alias.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: !authenticate
    Commands:
	/tmp

Sudoers entry:
    RunAsUsers: root
    Commands:
	<BIN_LS>
	/usr/bin/true
	/usr/bin/false
