test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/cwd_across_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: !authenticate
    Commands:
	/tmp

Sudoers entry:
    RunAsUsers: root
    Cwd: *
    Commands:
	/usr/bin/true

Sudoers entry:
    RunAsUsers: ferris
    Cwd: *
    Commands:
	/usr/bin/false
