test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/cwd_nopasswd.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
Matching Defaults entries for root on container:
    !fqdn, !lecture, !mailerpath

User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: !authenticate
    Cwd: *
    Commands:
	/usr/bin/true
