test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/cwd_not_in_first_position.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Commands:
	/usr/bin/true

Sudoers entry:
    RunAsUsers: root
    Cwd: *
    Commands:
	/usr/bin/false
