test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/cwd_path.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Cwd: /home
    Commands:
	/usr/bin/true
